unpackaged/main/default/objects/Software_Subscription_Lookup__mdt/Software_Subscription_Lookup__mdt.object-meta.xml
<CustomObject>
    <label>Software Subscription Lookup</label>
    <pluralLabel>Software Subscription Lookup</pluralLabel>
</CustomObject>