unpackaged/main/default/objects/Software_Subscription_Lookup__mdt/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <label>Max</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>