unpackaged/main/default/objects/Software_Subscription_Lookup__mdt/fields/Min__c.field-meta.xml
<CustomField>
    <fullName>Min__c</fullName>
    <label>Min</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>