unpackaged/main/default/objects/Software_Subscription_Lookup__mdt/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <length>40</length>
    <type>Text</type>
</CustomField>