unpackaged/main/default/objects/Software_Subscription_Lookup__mdt/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>40</length>
    <type>Text</type>
</CustomField>