unpackaged/main/default/objects/Software_Subscription_Lookup__mdt/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>