unpackaged/main/default/objects/Software_Subscription_Lookup__mdt/listViews/All_Metadata.listView-meta.xml
<ListView>
    <fullName>All_Metadata</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Amount__c</columns>
    <columns>Max__c</columns>
    <columns>Min__c</columns>
    <columns>Options__c</columns>
    <columns>Product__c</columns>
    <columns>Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Metadata</label>
    <language>en_US</language>
</ListView>